<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_shape_bk"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/whiteTextColor"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/eTName"
            android:background="@color/white"
            android:textStyle="normal"
            app:hintTextColor="@color/whiteTextColor"
            android:hint="@string/enter_your_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextColor="@color/whiteTextColor"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/enter_your_mail_address" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/whiteTextColor"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTPassword"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@color/white"
            android:drawablePadding="70dp"
            android:hint="@string/enter_your_password"
            android:paddingStart="50dp"
            app:hintTextColor="@color/whiteTextColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/whiteTextColor"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:hintTextColor="@color/whiteTextColor"
            android:hint="@string/enter_your_username" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_height="wrap_content"
        android:text="@string/button" />

</LinearLayout>